--- a/Financial_Sentiment_Analysis_using_Llama3.ipynb
+++ b/Financial_Sentiment_Analysis_using_Llama3.ipynb
@@ -17,6 +17,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state": {},
         "7ec1e464da2e40809274b597519ed2e8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
